@@ -1,3 +1,7 @@
+2011-08-19  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-10-07
+        * Fixes for DataModel-00-23-21 from SS.
+
 2011-08-17  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-10-06
         * Move monitoring back to RAWtoESD step to avoid
